--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>QR Code Generator</title>
-  <link rel="stylesheet" href="style.css">  </head>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
   <h1>QR Code Generator</h1>
-  <input type="text" id="dataInput" placeholder="Enter text or URL">
-  <button onclick="generateQR()">Generate QR Code</button>
-  <div id="qr-code-container"></div>
-  <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.9.0/qrcode.min.js"></script>
+  <div class="container">
+    <div class="input-container">
+      <label for="dataInput">Text</label>
+      <textarea id="dataInput" rows=10 placeholder="Enter text"></textarea>
+    </div>
+    <button onclick="generateQR()">Generate QR Code</button>
+    <div class="qr-code" id="qr-code-container"></div>
+    <div class="download">
+      <button href="#" id="downloadLink">Download PNG</button>
+    </div>
+  </div>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script> -->
+  <script src="https://unpkg.com/qr-code-styling@1.5.0/lib/qr-code-styling.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
